easysoa proxy : excluded cxf-rt-databinding-jibx else equinox conflict and improved deploy FAQ